@@ -408,6 +408,99 @@ class TestMessage(unittest.TestCase):
         self.assertTrue(msg.is_bad_headers())
 
 
+class TestMailerSendmail(unittest.TestCase):
+
+    def test_dummy_send_immediately_sendmail(self):
+
+        from pyramid_mailer.mailer import DummyMailer
+        from pyramid_mailer.message import Message
+
+        mailer = DummyMailer()
+
+        msg = Message(subject="testing",
+                      sender="sender@example.com",
+                      recipients=["tester@example.com"],
+                      body="test")
+
+        mailer.send_immediately_sendmail(msg)
+
+        self.assertEqual(len(mailer.outbox), 1)
+
+    def test_dummy_send_immediately_sendmail_and_fail_silently(self):
+
+        from pyramid_mailer.mailer import DummyMailer
+        from pyramid_mailer.message import Message
+
+        mailer = DummyMailer()
+
+        msg = Message(subject="testing",
+                      sender="sender@example.com",
+                      recipients=["tester@example.com"],
+                      body="test")
+
+        mailer.send_immediately_sendmail(msg, True)
+
+        self.assertEqual(len(mailer.outbox), 1)
+
+    def test_dummy_send_sendmail(self):
+
+        from pyramid_mailer.mailer import DummyMailer
+        from pyramid_mailer.message import Message
+
+        mailer = DummyMailer()
+
+        msg = Message(subject="testing",
+                      sender="sender@example.com",
+                      recipients=["tester@example.com"],
+                      body="test")
+
+        mailer.send_sendmail(msg)
+
+        self.assertEqual(len(mailer.outbox), 1)
+
+    def test_send_sendmail(self):
+        """
+            since we're in a transaction, we don't have to worry 
+            about actually sending an email
+        """
+
+        from pyramid_mailer.mailer import Mailer
+        from pyramid_mailer.message import Message
+
+        mailer = Mailer()
+
+        msg = Message(subject="test_send_sendmail",
+                      sender="sender@example.com",
+                      recipients=["tester@example.com"],
+                      body="body-test_send_sendmail")
+        mailer.send_sendmail(msg)
+
+    def test_send_immediately_sendmail(self):
+        """
+            since we're not in transaction, we will worry
+            about actually sending an email.
+            
+            this test is only included for when you want to `tail -f mail.log`
+        """
+        I_ACTUALLY_WANT_TO_SEND_EMAIL = False
+        email_sender = "sender@example.com"
+        email_recipient = "tester@example.com"
+        
+        if not I_ACTUALLY_WANT_TO_SEND_EMAIL:
+            return
+        
+        from pyramid_mailer.mailer import Mailer
+        from pyramid_mailer.message import Message
+
+        mailer = Mailer()
+
+        msg = Message(subject="test_send_immediately_sendmail",
+                      sender = email_sender,
+                      recipients = [ email_recipient ],
+                      body="body-test_send_immediately_sendmail")
+        mailer.send_immediately_sendmail(msg)
+        
+
 class TestMailer(unittest.TestCase):
 
     def test_dummy_send_immediately(self):
